--- a/.github/workflows/ci-pacman.yml
+++ b/.github/workflows/ci-pacman.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI with SafeDep
 
 on:
   workflow_dispatch:
@@ -15,7 +15,7 @@ jobs:
         profile:
           - name: 'compile-with-JDK11'
             jdk: 11
-            args: '-DskipTests compile'
+            args: '-DskipTests -Drat.skip=true compile'
       fail-fast: false
     timeout-minutes: 30
     runs-on: ubuntu-latest
