--- a/.github/workflows/ci-pacman.yml
+++ b/.github/workflows/ci-pacman.yml
@@ -44,7 +44,7 @@ jobs:
       with:
         java-version: ${{ matrix.profile.jdk }}
     - name: Build with Maven (${{ matrix.profile.name }})
-      run: mvn -B -V -e -ntp "-Dstyle.color=always" ${{ matrix.profile.args }}
+      run: mvn -B -V -e "-Dstyle.color=always" ${{ matrix.profile.args }}
       env:
         MAVEN_OPTS: -Djansi.force=true
 
